[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/Hero/Hero_Pistol/Hero_Pistol.png" type="Texture" id=2]
[ext_resource path="res://assets/Soldat/Soldier.png" type="Texture" id=3]
[ext_resource path="res://assets/song/Cs-GO Theme Song - Shitty Fluted (ORIGINAL).wav" type="AudioStream" id=4]
[ext_resource path="res://assets/Settings/Settings BG.png" type="Texture" id=5]
[ext_resource path="res://assets/Main menu/Button BG.png" type="Texture" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 111, 231 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 197, 44 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
normal_map = ExtResource( 5 )
region_rect = Rect2( 0, 0, 111, 231 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 197, 44 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 111, 231 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelHost" type="Panel" parent="."]
margin_left = 11.0
margin_top = 157.0
margin_right = 305.0
margin_bottom = 321.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelHost"]
margin_left = 108.821
margin_top = 7.05963
margin_right = 193.821
margin_bottom = 21.0596
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PanelHost"]
margin_left = 10.0
margin_top = 30.0
margin_right = 90.0
margin_bottom = 44.0
text = "Server name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtServerName" type="LineEdit" parent="PanelHost"]
margin_left = 10.0
margin_top = 46.9404
margin_right = 282.0
margin_bottom = 70.9404
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="PanelHost"]
margin_left = 15.9708
margin_top = 82.6537
margin_right = 55.9708
margin_bottom = 96.6537
text = "Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtServerPort" type="LineEdit" parent="PanelHost"]
margin_left = 10.6634
margin_top = 103.288
margin_right = 72.6634
margin_bottom = 127.288
text = "4546"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="PanelHost"]
margin_left = 96.3171
margin_top = 82.6537
margin_right = 204.317
margin_bottom = 96.6537
text = "Max connections"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtMaxPlayers" type="SpinBox" parent="PanelHost"]
margin_left = 96.9805
margin_top = 101.961
margin_right = 170.981
margin_bottom = 125.961
min_value = 2.0
max_value = 16.0
value = 6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btCreate" type="Button" parent="PanelHost"]
margin_left = 222.0
margin_top = 119.0
margin_right = 278.0
margin_bottom = 143.0
custom_styles/normal = SubResource( 2 )
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelJoin" type="Panel" parent="."]
margin_left = 10.0
margin_top = 316.0
margin_right = 304.0
margin_bottom = 446.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelJoin"]
margin_left = 113.675
margin_top = 4.85431
margin_right = 180.675
margin_bottom = 18.8543
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PanelJoin"]
margin_left = 16.8211
margin_top = 46.9071
margin_right = 36.8211
margin_bottom = 60.9071
text = "IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtJoinIP" type="LineEdit" parent="PanelJoin"]
margin_left = 13.1456
margin_top = 66.0528
margin_right = 115.146
margin_bottom = 90.0528
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="PanelJoin"]
margin_left = 136.616
margin_top = 47.6422
margin_right = 166.616
margin_bottom = 61.6422
text = "Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtJoinPort" type="LineEdit" parent="PanelJoin"]
margin_left = 133.675
margin_top = 64.5826
margin_right = 195.675
margin_bottom = 88.5826
text = "4546"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btJoin" type="Button" parent="PanelJoin"]
margin_left = 217.94
margin_top = 86.9668
margin_right = 281.94
margin_bottom = 109.967
custom_styles/normal = SubResource( 4 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelPlayer" type="Panel" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 303.0
margin_bottom = 161.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelPlayer"]
margin_left = 101.151
margin_top = 6.73509
margin_right = 184.151
margin_bottom = 20.7351
text = "Player name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPlayerName" type="LineEdit" parent="PanelPlayer"]
margin_left = 10.0
margin_top = 26.0
margin_right = 280.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PanelPlayer"]
margin_left = 127.467
margin_top = 68.1259
margin_right = 237.467
margin_bottom = 82.1259
text = "Select your Team"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerIcon" type="Sprite" parent="PanelPlayer"]
position = Vector2( 55.8828, 87.8549 )
scale = Vector2( 2.69265, 2.17085 )
texture = ExtResource( 2 )

[node name="PlayerIcon2" type="Sprite" parent="PanelPlayer"]
visible = false
position = Vector2( 55.8829, 90.2985 )
scale = Vector2( 2.69265, 2.17085 )
texture = ExtResource( 3 )

[node name="btColor" type="ColorPickerButton" parent="PanelPlayer"]
visible = false
margin_left = 90.0
margin_top = 86.0
margin_right = 148.0
margin_bottom = 106.0
color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btDefaultColor" type="Button" parent="PanelPlayer"]
visible = false
margin_left = 89.0
margin_top = 106.0
margin_right = 147.0
margin_bottom = 126.0
disabled = true
text = "Default"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btSelectTeam" type="OptionButton" parent="PanelPlayer"]
margin_left = 127.842
margin_top = 88.0794
margin_right = 277.842
margin_bottom = 120.079
text = "Select your Team"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 1.0
pitch_scale = 0.73
[connection signal="pressed" from="PanelHost/btCreate" to="." method="_on_btCreate_pressed"]
[connection signal="pressed" from="PanelJoin/btJoin" to="." method="_on_btJoin_pressed"]
[connection signal="color_changed" from="PanelPlayer/btColor" to="." method="_on_btColor_color_changed"]
[connection signal="pressed" from="PanelPlayer/btDefaultColor" to="." method="_on_btDefaultColor_pressed"]
[connection signal="item_selected" from="PanelPlayer/btSelectTeam" to="." method="_on_btSelectTeam_item_selected"]
